--- a/appspec.yml
+++ b/appspec.yml
@@ -1,21 +1,50 @@
+# version: 0.0
+# os: linux
+
+# files:
+#   - source: /
+#     destination: /var/www/frontend
+
+# hooks:
+#   BeforeInstall:
+#     - location: scripts/before-install.sh
+#       timeout: 300
+#       runas: root
+
+#   Install:
+#     - location: scripts/install-dependencies.sh
+#       timeout: 300
+#       runas: root
+
+#   ApplicationStart:
+#     - location: scripts/start-application.sh
+#       timeout: 300
+#       runas: root
+
+
+
+
+
+
+
+
+
+
 version: 0.0
 os: linux
 
 files:
   - source: /
-    destination: /var/www/frontend
-
+    destination: /var/www/html
 hooks:
   BeforeInstall:
     - location: scripts/before-install.sh
       timeout: 300
       runas: root
-
   Install:
     - location: scripts/install-dependencies.sh
       timeout: 300
       runas: root
-
   ApplicationStart:
     - location: scripts/start-application.sh
       timeout: 300
